# consumesnitch

./: LICENSE  README.md  pyproject.toml
src/consumesnitch/: consumesnitch.py
